cmake_minimum_required(VERSION 3.15)

set(CMAKE_C_COMPILER             "/usr/bin/clang-9")
set(CMAKE_C_FLAGS                "-Wall -std=c99")
set(CMAKE_C_FLAGS_DEBUG          "-g")
set(CMAKE_C_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

set(CMAKE_CXX_COMPILER             "/usr/bin/clang++-9")
set(CMAKE_CXX_FLAGS                "-Wall")
set(CMAKE_CXX_FLAGS_DEBUG          "-g")
set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_AR      "/usr/bin/llvm-ar-9")
set(CMAKE_LINKER  "/usr/bin/llvm-ld-9")
set(CMAKE_NM      "/usr/bin/llvm-nm-9")
set(CMAKE_OBJDUMP "/usr/bin/llvm-objdump-9")
set(CMAKE_RANLIB  "/usr/bin/llvm-ranlib-9")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(grab)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
enable_testing()
include(AddGoogleTest)
add_executable(grab src/grab.cpp)
add_gtest(grab)
